# tuneapi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: version-bump.mdc
.github/workflows/: static.yaml
benchmarks/: threaded_map.py
cookbooks/: baby_server.py  finetuning.ipynb  function_calling.ipynb  structured_generation.ipynb
docs/: changelog.rst  conf.py  index.rst
tests/: apis.py  test_apis.py  test_toolcall_sync_async.py  test_tree.py
tests/utils/: caching.py
ts/: .gitignore  README.md  index.ts  package-lock.json  package.json  tsconfig.json
ts/apis/: model_anthropic.ts  model_gemini.ts  model_openai.ts
ts/tests/: test_basic.ts  test_runner.ts  test_structured.ts  test_thinking.ts  test_toolcall.ts
ts/types/: chats.ts  schema.ts
ts/utils/: env.ts
tuneapi/: __init__.py  __main__.py  apis.py
tuneapi/apis/: __init__.py  assistants.py  compat.py  model_anthropic.py  model_gemini.py  model_grok.py  model_groq.py  model_mistral.py  model_openai.py  model_tune.py  threads.py  turbo.py
tuneapi/endpoints/: __init__.py  assistants.py  common.py  finetune.py  threads.py
tuneapi/types/: __init__.py  bm.py  chats.py  evals.py  experimental.py
tuneapi/utils/: __init__.py  caching.py  code.py  env.py  fs.py  logger.py  logic.py  mime.py  misc.py  networking.py  parallel.py  prompts.py  randomness.py  serdeser.py  subway.py  terminal.py
