[tool.poetry]
name = "tuneapi"
version = "8.0.9"
description = "A swiss knife python package for building application with LLMs. Very opinionated."
authors = [
    "Yash Bonde",
    "Frello Technology Private Limited <engineering@nimblebox.ai>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yashbonde/tuneapi"

[tool.poetry.dependencies]
python = "^3.10"
fire = "0.7.0"
requests = "^2.31.0"
cloudpickle = "3.0.0"
cryptography = ">=42.0.5"
tqdm = "^4.66.1"
snowflake_id = "1.0.2"
nutree = "0.8.0"
pillow = "^10.2.0"
httpx = "^0.28.1"
pydantic = "^2.6.4"
aiofiles = "^24.1.0"
protobuf = { version = "^5.27.3", optional = true }
boto3 = { version = "1.29.6", optional = true }

[tool.poetry.extras]
boto3 = ["boto3"]
protobuf = ["protobuf"]
all = ["boto3", "protobuf"]

[tool.poetry.group.dev.dependencies]
sphinx = "7.2.5"
sphinx_rtd_theme = "1.3.0"
poetry = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
